Seguros: Registro de solicitud y generación de código safetypay
