# src/app/api/api-payment/models/rq-post-transaction.ts
@@ -3,14 +3,14 @@
 import { RqTransactionAmount } from './rq-transaction-amount';
 import { RqTransactionBooking } from './rq-transaction-booking';
 import { RqTransactionExternal } from './rq-transaction-external';
-import { RqTransactionHolderCard } from './rq-transaction-holder-card';
+import { RqTransactionHolder } from './rq-transaction-holder';
 import { RqTransactionSetting } from './rq-transaction-setting';
 import { RqTransactionSignIn } from './rq-transaction-sign-in';
 export interface RqPostTransaction {
   Amount?: RqTransactionAmount;
   Booking?: RqTransactionBooking;
   External?: RqTransactionExternal;
-  HolderCard?: RqTransactionHolderCard;
+  Holder?: RqTransactionHolder;
   Identifier?: null | string;
   Setting?: RqTransactionSetting;
   SignIn?: RqTransactionSignIn;
