# src/app/api/api-payment/models/rq-transaction-holder-card.ts
@@ -1,8 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-export interface RqTransactionHolderCard {
-  Expiration?: null | string;
-  Firstname?: null | string;
-  Lastname?: null | string;
-  Number?: null | string;
-}
